Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UDecalComponent.h

	DOTNET_EXPORT auto E_UDecalComponent_PostRepNotifies(UDecalComponent* Self)
	{
		Self->PostRepNotifies();
	}
	DOTNET_EXPORT auto E_UDecalComponent_PreNetReceive(UDecalComponent* Self)
	{
		Self->PreNetReceive();
	}
	DOTNET_EXPORT auto E_UDecalComponent_PropagateLightingScenarioChange(UDecalComponent* Self)
	{
		Self->PropagateLightingScenarioChange();
	}
	DOTNET_EXPORT auto E_UDecalComponent_SetRelativeScale3D(UDecalComponent* Self, INT_PTR NewScale3D)
	{
		auto _p0 = *(FVector*)NewScale3D;
		Self->SetRelativeScale3D(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_ShouldCollideWhenPlacing(UDecalComponent* Self)
	{
		return Self->ShouldCollideWhenPlacing();
	}
	DOTNET_EXPORT auto E_UDecalComponent_ShouldCreateRenderState(UDecalComponent* Self)
	{
		return Self->ShouldCreateRenderState();
	}
	DOTNET_EXPORT auto E_UDecalComponent_UpdatePhysicsVolume(UDecalComponent* Self, bool bTriggerNotifiers)
	{
		auto _p0 = bTriggerNotifiers;
		Self->UpdatePhysicsVolume(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_Activate(UDecalComponent* Self, bool bReset)
	{
		auto _p0 = bReset;
		Self->Activate(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_AddTickPrerequisiteActor(UDecalComponent* Self, AActor* PrerequisiteActor)
	{
		auto _p0 = PrerequisiteActor;
		Self->AddTickPrerequisiteActor(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_AddTickPrerequisiteComponent(UDecalComponent* Self, UActorComponent* PrerequisiteComponent)
	{
		auto _p0 = PrerequisiteComponent;
		Self->AddTickPrerequisiteComponent(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_Deactivate(UDecalComponent* Self)
	{
		Self->Deactivate();
	}
	DOTNET_EXPORT auto E_UDecalComponent_GetComponentClassCanReplicate(UDecalComponent* Self)
	{
		return Self->GetComponentClassCanReplicate();
	}
	DOTNET_EXPORT auto E_UDecalComponent_GetReadableName(UDecalComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetReadableName());
	}
	DOTNET_EXPORT auto E_UDecalComponent_HasValidPhysicsState(UDecalComponent* Self)
	{
		return Self->HasValidPhysicsState();
	}
	DOTNET_EXPORT auto E_UDecalComponent_InitializeComponent(UDecalComponent* Self)
	{
		Self->InitializeComponent();
	}
	DOTNET_EXPORT auto E_UDecalComponent_InvalidateLightingCacheDetailed(UDecalComponent* Self, bool bInvalidateBuildEnqueuedLighting, bool bTranslationOnly)
	{
		auto _p0 = bInvalidateBuildEnqueuedLighting;
		auto _p1 = bTranslationOnly;
		Self->InvalidateLightingCacheDetailed(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UDecalComponent_IsActive(UDecalComponent* Self)
	{
		return Self->IsActive();
	}
	DOTNET_EXPORT auto E_UDecalComponent_IsEditorOnly(UDecalComponent* Self)
	{
		return Self->IsEditorOnly();
	}
	DOTNET_EXPORT auto E_UDecalComponent_IsNameStableForNetworking(UDecalComponent* Self)
	{
		return Self->IsNameStableForNetworking();
	}
	DOTNET_EXPORT auto E_UDecalComponent_IsNavigationRelevant(UDecalComponent* Self)
	{
		return Self->IsNavigationRelevant();
	}
	DOTNET_EXPORT auto E_UDecalComponent_IsReadyForOwnerToAutoDestroy(UDecalComponent* Self)
	{
		return Self->IsReadyForOwnerToAutoDestroy();
	}
	DOTNET_EXPORT auto E_UDecalComponent_IsSupportedForNetworking(UDecalComponent* Self)
	{
		return Self->IsSupportedForNetworking();
	}
	DOTNET_EXPORT auto E_UDecalComponent_MarkAsEditorOnlySubobject(UDecalComponent* Self)
	{
		Self->MarkAsEditorOnlySubobject();
	}
	DOTNET_EXPORT auto E_UDecalComponent_NeedsLoadForClient(UDecalComponent* Self)
	{
		return Self->NeedsLoadForClient();
	}
	DOTNET_EXPORT auto E_UDecalComponent_NeedsLoadForEditorGame(UDecalComponent* Self)
	{
		return Self->NeedsLoadForEditorGame();
	}
	DOTNET_EXPORT auto E_UDecalComponent_NeedsLoadForServer(UDecalComponent* Self)
	{
		return Self->NeedsLoadForServer();
	}
	DOTNET_EXPORT auto E_UDecalComponent_OnActorEnableCollisionChanged(UDecalComponent* Self)
	{
		Self->OnActorEnableCollisionChanged();
	}
	DOTNET_EXPORT auto E_UDecalComponent_OnComponentCreated(UDecalComponent* Self)
	{
		Self->OnComponentCreated();
	}
	DOTNET_EXPORT auto E_UDecalComponent_OnCreatePhysicsState(UDecalComponent* Self)
	{
		((E_PROTECTED_WRAP_UDecalComponent*)Self)->OnCreatePhysicsState_WRAP();
	}
	DOTNET_EXPORT auto E_UDecalComponent_OnDestroyPhysicsState(UDecalComponent* Self)
	{
		((E_PROTECTED_WRAP_UDecalComponent*)Self)->OnDestroyPhysicsState_WRAP();
	}
	DOTNET_EXPORT auto E_UDecalComponent_PostInitProperties(UDecalComponent* Self)
	{
		Self->PostInitProperties();
	}
	DOTNET_EXPORT auto E_UDecalComponent_PostLoad(UDecalComponent* Self)
	{
		Self->PostLoad();
	}
	DOTNET_EXPORT auto E_UDecalComponent_PostRename(UDecalComponent* Self, UObject* OldOuter, char* OldName)
	{
		auto _p0 = OldOuter;
		auto _p1 = ConvertFromManage_FName(OldName);
		Self->PostRename(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UDecalComponent_RegisterComponentTickFunctions(UDecalComponent* Self, bool bRegister)
	{
		auto _p0 = bRegister;
		Self->RegisterComponentTickFunctions(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_RemoveTickPrerequisiteActor(UDecalComponent* Self, AActor* PrerequisiteActor)
	{
		auto _p0 = PrerequisiteActor;
		Self->RemoveTickPrerequisiteActor(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_RemoveTickPrerequisiteComponent(UDecalComponent* Self, UActorComponent* PrerequisiteComponent)
	{
		auto _p0 = PrerequisiteComponent;
		Self->RemoveTickPrerequisiteComponent(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_RequiresGameThreadEndOfFrameRecreate(UDecalComponent* Self)
	{
		return Self->RequiresGameThreadEndOfFrameRecreate();
	}
	DOTNET_EXPORT auto E_UDecalComponent_RequiresGameThreadEndOfFrameUpdates(UDecalComponent* Self)
	{
		return Self->RequiresGameThreadEndOfFrameUpdates();
	}
	DOTNET_EXPORT auto E_UDecalComponent_SendRenderDynamicData_Concurrent(UDecalComponent* Self)
	{
		((E_PROTECTED_WRAP_UDecalComponent*)Self)->SendRenderDynamicData_Concurrent_WRAP();
	}
	DOTNET_EXPORT auto E_UDecalComponent_SetActive(UDecalComponent* Self, bool bNewActive, bool bReset)
	{
		auto _p0 = bNewActive;
		auto _p1 = bReset;
		Self->SetActive(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UDecalComponent_SetAutoActivate(UDecalComponent* Self, bool bNewAutoActivate)
	{
		auto _p0 = bNewAutoActivate;
		Self->SetAutoActivate(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_SetComponentTickEnabled(UDecalComponent* Self, bool bEnabled)
	{
		auto _p0 = bEnabled;
		Self->SetComponentTickEnabled(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_SetComponentTickEnabledAsync(UDecalComponent* Self, bool bEnabled)
	{
		auto _p0 = bEnabled;
		Self->SetComponentTickEnabledAsync(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_ShouldActivate(UDecalComponent* Self)
	{
		return ((E_PROTECTED_WRAP_UDecalComponent*)Self)->ShouldActivate_WRAP();
	}
	DOTNET_EXPORT auto E_UDecalComponent_ShouldCreatePhysicsState(UDecalComponent* Self)
	{
		return Self->ShouldCreatePhysicsState();
	}
	DOTNET_EXPORT auto E_UDecalComponent_ToggleActive(UDecalComponent* Self)
	{
		Self->ToggleActive();
	}
	DOTNET_EXPORT auto E_UDecalComponent_UninitializeComponent(UDecalComponent* Self)
	{
		Self->UninitializeComponent();
	}
	DOTNET_EXPORT auto E_UDecalComponent_AreNativePropertiesIdenticalTo(UDecalComponent* Self, UObject* Other)
	{
		auto _p0 = Other;
		return Self->AreNativePropertiesIdenticalTo(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_CheckDefaultSubobjectsInternal(UDecalComponent* Self)
	{
		return Self->CheckDefaultSubobjectsInternal();
	}
	DOTNET_EXPORT auto E_UDecalComponent_FinishDestroy(UDecalComponent* Self)
	{
		Self->FinishDestroy();
	}
	DOTNET_EXPORT auto E_UDecalComponent_GetDesc(UDecalComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetDesc());
	}
	DOTNET_EXPORT auto E_UDecalComponent_GetDetailedInfoInternal(UDecalComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetDetailedInfoInternal());
	}
	DOTNET_EXPORT auto E_UDecalComponent_IsAsset(UDecalComponent* Self)
	{
		return Self->IsAsset();
	}
	DOTNET_EXPORT auto E_UDecalComponent_IsFullNameStableForNetworking(UDecalComponent* Self)
	{
		return Self->IsFullNameStableForNetworking();
	}
	DOTNET_EXPORT auto E_UDecalComponent_IsLocalizedResource(UDecalComponent* Self)
	{
		return Self->IsLocalizedResource();
	}
	DOTNET_EXPORT auto E_UDecalComponent_IsPostLoadThreadSafe(UDecalComponent* Self)
	{
		return Self->IsPostLoadThreadSafe();
	}
	DOTNET_EXPORT auto E_UDecalComponent_IsReadyForFinishDestroy(UDecalComponent* Self)
	{
		return Self->IsReadyForFinishDestroy();
	}
	DOTNET_EXPORT auto E_UDecalComponent_IsSafeForRootSet(UDecalComponent* Self)
	{
		return Self->IsSafeForRootSet();
	}
	DOTNET_EXPORT auto E_UDecalComponent_Modify(UDecalComponent* Self, bool bAlwaysMarkDirty)
	{
		auto _p0 = bAlwaysMarkDirty;
		return Self->Modify(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_NotifyObjectReferenceEliminated(UDecalComponent* Self)
	{
		Self->NotifyObjectReferenceEliminated();
	}
	DOTNET_EXPORT auto E_UDecalComponent_PostCDOContruct(UDecalComponent* Self)
	{
		Self->PostCDOContruct();
	}
	DOTNET_EXPORT auto E_UDecalComponent_PostEditImport(UDecalComponent* Self)
	{
		Self->PostEditImport();
	}
	DOTNET_EXPORT auto E_UDecalComponent_PostSaveRoot(UDecalComponent* Self, bool bCleanupIsRequired)
	{
		auto _p0 = bCleanupIsRequired;
		Self->PostSaveRoot(_p0);
	}
	DOTNET_EXPORT auto E_UDecalComponent_PreDestroyFromReplication(UDecalComponent* Self)
	{
		Self->PreDestroyFromReplication();
	}